data/logs/logs4-30---vdhJbQ.txt
configlo:30,17:25:45:handle_exception:84:vdhJbQ -- Custom Uncaught exception
Traceback (most recent call last):
  File "/usr/lib/python3.8/runpy.py", line 193, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/usr/lib/python3.8/runpy.py", line 86, in _run_code
    exec(code, run_globals)
  File "/home/henry/pydocs/processing/sql_server.py", line 4, in <module>
    import processing.sql as sql
  File "/home/henry/pydocs/processing/sql.py", line 103
    sess.merge(fileid_obj_map[clos.parent[0])
                                            ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
configlo:30,17:25:45:mp_sendmail:121:vdhJbQ -- sending mail
configlo:30,17:25:45:handle_exception:87:vdhJbQ -- exiting! from sshook
